# firstmpc_robot

./: README.md  package.xml  setup.py
launch/: bringup.launch.py
my_robot_controller/: can_bridge_node.py
params/: nav2_mppi_params.yaml
