<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format3>
  <name>my_robot_controller</name>
  <version>0.0.1</version>
  <description>국방로봇경진대회 무한궤도 제어 패키지</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_mppi_controller</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>